# biomeat

./: Cargo.toml  README.md
.github/workflows/: cd.yaml  ci.yml
src/: chapter.rs  client.rs  fs.rs  lib.rs  main.rs  manga.rs  termio.rs
